--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,26 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <header>
+        <div class="header-wrapper">
+          <div class="header-outer">
+            <div class="header-content-left">
+              <%= link_to image_tag('app_logo'), root_path %>
+              <p>エリア</p>
+              <p>キーワード</p>
+            </div>
+            <div class="header-content-right">
+              <p>ログイン</p>
+              <p>新規登録</p>
+            </div>
+          </div>
+        </div>
+      </header>
+      <main>
+        <%= yield %>
+      </main>
+      <footer>© 2022 POTEPAN.INC.</footer>
+    </div>
   </body>
 </html>
