【追加】ユーザ登録、およびアカウント情報の編集機能を実装

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -44,3 +44,11 @@ footer {
   text-align: center;
   color: white;
 }
+
+.notice {
+  background-color: palegreen;
+}
+
+.alert {
+  background-color: lightcoral;
+}
