--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
             </div>
             <div class="header-content-right">
               <p>ログイン</p>
-              <p>新規登録</p>
+              <%= link_to "新規登録", users_sign_up_path %>
             </div>
           </div>
         </div>
