【修正】プロフィール編集ページの追加のために、ルーティングを変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
             </div>
             <div class="header-content-right">
               <p>ログイン</p>
-              <%= link_to "新規登録", users_sign_up_path %>
+              <%= link_to "新規登録", new_user_path %>
             </div>
           </div>
         </div>
