--- a/app/views/users/profiles/show.html.erb
+++ b/app/views/users/profiles/show.html.erb
@@ -22,7 +22,13 @@
       <tbody>
         <tr>
           <th>アイコン</th>
-          <td><%= @user.icon %></td>
+          <td>
+            <% if @user.avatar.attached? %>
+              <%= image_tag @user.avatar.variant(resize: '100x100^', gravity: "center", crop: "100x100+0+0").processed, class: 'avatar' %>
+            <% else %>
+              <%= image_tag 'default_avatar', size: '100x100', class: 'avatar' %>
+            <% end %>
+          </td>
         </tr>
         <tr>
           <th>ユーザ名</th>
