--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,21 +5,15 @@
     <p class="alert"><%= flash.now[:alert] %></p>
   <% end %>
 
-  <%= render "shared/error", obj: @user %>
-
-  <div class="my-page-navigator">
-    <ul>
-      <li><%= link_to "アカウント", user_path(@user) %></li>
-      <li><%= link_to "プロフィール", user_profile_path(@user) %></li>
-    </ul>
-  </div>
+  <%= render "shared/error", obj: current_user %>
+  <%= render 'shared/my_page_navigator' %>
 
   <div class="my-page-content-main">
     <div class="my-page-content-main-header">
       <h2>アカウント</h2>
     </div>
 
-    <%= form_with model: @user do |f| %>
+    <%= form_with model: current_user, url: user_account_path do |f| %>
       <table>
         <tbody>
           <tr>
@@ -40,7 +34,7 @@
           </tr>
         </tbody>
       </table>
-      <%= link_to "キャンセル", user_path(@user) %>
+      <%= link_to "キャンセル", :back %>
       <%= f.submit "保存" %>
     <% end %>
   </div>
