--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
 
   <%= render "shared/error", obj: @user %>
 
-  <%= form_with model: @user do |f| %>
+  <%= form_with model: @user, url: user_path do |f| %>
     <ul>
       <li><%= f.text_field :name, placeholder: "ユーザ名" %></li>
       <li><%= f.text_field :email, placeholder: "メールアドレス" %></li>
