--- a/app/views/users/profiles/show.html.erb
+++ b/app/views/users/profiles/show.html.erb
@@ -5,17 +5,12 @@
     <p class="notice"><%= flash[:notice] %></p>
   <% end %>
 
-  <div class="my-page-navigator">
-    <ul>
-      <li><%= link_to "アカウント", user_path(@user) %></li>
-      <li><%= link_to "プロフィール", user_profile_path(@user) %></li>
-    </ul>
-  </div>
+  <%= render 'shared/my_page_navigator' %>
 
   <div class="my-page-content-main">
     <div class="my-page-content-main-header">
       <h2>プロフィール</h2>
-      <%= link_to "編集", edit_user_profile_path(@user) %>
+      <%= link_to "編集", edit_user_profile_path %>
     </div>
 
     <table>
@@ -23,8 +18,8 @@
         <tr>
           <th>アイコン</th>
           <td>
-            <% if @user.avatar.attached? %>
-              <%= image_tag @user.avatar.variant(resize: '100x100^', gravity: "center", crop: "100x100+0+0").processed, class: 'avatar' %>
+            <% if current_user.avatar.attached? %>
+              <%= image_tag current_user.avatar.variant(resize: '100x100^', gravity: "center", crop: "100x100+0+0").processed, class: 'avatar' %>
             <% else %>
               <%= image_tag 'default_avatar', size: '100x100', class: 'avatar' %>
             <% end %>
@@ -32,11 +27,11 @@
         </tr>
         <tr>
           <th>ユーザ名</th>
-          <td><%= @user.name %></td>
+          <td><%= current_user.name %></td>
         </tr>
         <tr>
           <th>自己紹介</th>
-          <td><%= @user.introduction %></td>
+          <td><%= current_user.introduction %></td>
         </tr>
       </tbody>
     </table>
