--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,24 +5,19 @@
     <p class="notice"><%= flash[:notice] %></p>
   <% end %>
 
-  <div class="my-page-navigator">
-    <ul>
-      <li><%= link_to "アカウント", user_path(@user) %></li>
-      <li><%= link_to "プロフィール", user_profile_path(@user) %></li>
-    </ul>
-  </div>
+  <%= render 'shared/my_page_navigator' %>
 
   <div class="my-page-content-main">
     <div class="my-page-content-main-header">
       <h2>アカウント</h2>
-      <%= link_to "編集", edit_user_path(@user) %>
+      <%= link_to "編集", edit_user_account_path %>
     </div>
 
     <table>
       <tbody>
         <tr>
           <th>メールアドレス</th>
-          <td><%= @user.email %></td>
+          <td><%= current_user.email %></td>
         </tr>
         <tr>
           <th>パスワード</th>
