--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,12 @@
             </div>
             <div class="header-content-right">
               <% if logged_in? %>
-                <%= image_tag current_user.avatar.variant(resize: '50x50^', gravity: "center", crop: "50x50+0+0").processed, class: 'avatar' %>
+                <% if current_user.avatar.attached? %>
+                  <%= image_tag current_user.avatar.variant(resize: '50x50^', gravity: "center", crop: "50x50+0+0").processed, class: 'avatar' %>
+                <% else %>
+                  <%= image_tag 'default_avatar', size: '50x50', class: 'avatar' %>
+                <% end %>
+
                 <%= current_user.name %>
                 <%= link_to "ログアウト", logout_path, method: :delete %>
               <% else %>
