--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,14 +22,30 @@
             </div>
             <div class="header-content-right">
               <% if logged_in? %>
-                <% if current_user.avatar.attached? %>
-                  <%= image_tag current_user.avatar.variant(resize: '50x50^', gravity: "center", crop: "50x50+0+0").processed, class: 'avatar' %>
-                <% else %>
-                  <%= image_tag 'default_avatar', size: '50x50', class: 'avatar' %>
-                <% end %>
+                <%= check_box_tag 'dropdown-menu-checkbox', true, false, {class: 'dropdown-menu-checkbox'} %>
 
-                <%= current_user.name %>
-                <%= link_to "ログアウト", logout_path, method: :delete %>
+                <label for='dropdown-menu-checkbox' class='dropdown-menu-button arrow-bottom'>
+                  <% if current_user.avatar.attached? %>
+                    <%= image_tag current_user.avatar.variant(resize: '50x50^', gravity: "center", crop: "50x50+0+0").processed, class: 'avatar' %>
+                  <% else %>
+                    <%= image_tag 'default_avatar', size: '50x50', class: 'avatar' %>
+                  <% end %>
+
+                  <p><%= current_user.name %></p>
+                </label>
+
+                <div class="dropdown-menu">
+                  <ul>
+                    <li>施設関連</li>
+                    <ul>
+                      <li>新規登録</li>
+                      <li>予約一覧</li>
+                      <li>登録一覧</li>
+                    </ul>
+                    <li><%= link_to "アカウント設定", user_account_path %></li>
+                    <li><%= link_to "ログアウト", logout_path, method: :delete %></li>
+                  </ul>
+                </div>
               <% else %>
                 <%= link_to "ログイン", login_path %>
                 <%= link_to "新規登録", new_user_path %>
