【修正】ログアウト時にヘッダーに表示されるログイン・新規登録ボタンの見た目を変更

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -127,3 +127,21 @@ footer {
 .avatar {
   border-radius: 50%;
 }
+
+%button {
+  padding: 10px;
+  border-radius: 10%;
+  text-decoration: none;
+}
+
+.button-blue {
+  @extend %button;
+  background-color: blue;
+  color: white;
+}
+
+.button-darkorange {
+  @extend %button;
+  background-color: darkorange;
+  color: white;
+}
