--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,8 +47,8 @@
                   </ul>
                 </div>
               <% else %>
-                <%= link_to "ログイン", login_path %>
-                <%= link_to "新規登録", new_user_path %>
+                <%= link_to "ログイン", login_path, {class: 'button-blue'} %>
+                <%= link_to "新規登録", new_user_path, {class: 'button-darkorange'} %>
               <% end %>
             </div>
           </div>
