【追加】Read処理を実装

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -145,3 +145,12 @@ footer {
   background-color: darkorange;
   color: white;
 }
+
+.image-150x150 {
+  width: 150px;
+  height: 150px;
+}
+
+.image-contain {
+  object-fit: contain;
+}
