--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,8 +2,9 @@
   <div class="first-view-outer">
     <div class="first-view-content">
       <h1>Potepan Shareでまだ体験したことのない旅をしよう</h1>
-      <%= form_with url: rooms_path, method: :get do |f| %>
+      <%= form_with url: rooms_path, method: :get, class: 'room-search-form' do |f| %>
         <%= f.search_field :address, placeholder: 'エリア名を入力' %>
+        <%= f.search_field :keyword, placeholder: 'キーワードを入力' %>
         <%= f.submit '検索' %>
       <% end %>
     </div>
