--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,6 +1,7 @@
 <div class="room-search-bar">
-  <%= form_with url: rooms_path, method: :get do |f| %>
+  <%= form_with url: rooms_path, method: :get, class: 'room-search-form' do |f| %>
     <%= f.search_field :address, placeholder: 'エリア名を入力' %>
+    <%= f.search_field :keyword, placeholder: 'キーワードを入力' %>
     <%= f.submit '検索' %>
   <% end %>
 </div>
