--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -2,6 +2,12 @@
   <p class="notice"><%= flash.now[:notice] %></p>
 <% end %>
 
+<% if flash.now[:alert] %>
+  <p class="alert"><%= flash.now[:alert] %></p>
+<% end %>
+
+<%= render "shared/error", obj: @reservation %>
+
 <div class="room-detail-content">
   <div class="room-detail-navigator">
     <p><%= link_to "戻る", :back %></p>
@@ -24,12 +30,21 @@
       <p><%= @room.address %></p>
       <p><%= @room.introduction %></p>
       <p>¥<%= @room.price.to_s(:delimited) %>/日</p>
-      <div class="room-reserve">
-        <p>チェックイン</p>
-        <p>チェックアウト</p>
-        <p>人数</p>
-        <p>予約する</p>
-      </div>
+      <%= form_with model: @reservation, url: confirm_reservations_path do |f| %>
+        <%= f.label :date_check_in, 'チェックイン' %>
+        <%= f.date_field :date_check_in %>
+
+        <%= f.label :date_check_out, 'チェックアウト' %>
+        <%= f.date_field :date_check_out %>
+
+        <%= f.label :person_num, '人数' %>
+        <%= f.number_field :person_num, placeholder: '0' %>
+
+        <%= f.hidden_field :user_id, value: current_user.id %>
+        <%= f.hidden_field :room_id, value: @room.id %>
+
+        <%= f.submit '予約する' %>
+      <% end %>
     </div>
   </div>
 </div>
