--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,7 +37,7 @@
                     <li>施設関連</li>
                     <ul>
                       <li><%= link_to "新規登録", new_room_path %></li>
-                      <li>予約一覧</li>
+                      <li><%= link_to "予約一覧", reservations_path %></li>
                       <li><%= link_to "登録一覧", registrations_rooms_path %></li>
                     </ul>
                     <li><%= link_to "アカウント設定", user_account_path %></li>
