【修正】予約確定日時のフォーマットが仕様と異なったので修正

--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -32,7 +32,7 @@
         <td><%= reservation.calculate_payment.to_s(:delimited) %></td>
         <td><%= reservation.date_check_in.to_s(:date) %></td>
         <td><%= reservation.date_check_out.to_s(:date) %></td>
-        <td><%= reservation.updated_at.to_s(:date) %></td>
+        <td><%= reservation.updated_at.to_s(:datetime_to_minutes) %></td>
       </tr>
     <% end %>
   </tbody>
