【追加】施設詳細ページにスタイルを追加

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -116,6 +116,10 @@ footer {
   color: white;
 }
 
+.contents-container {
+  padding: 10px 32px;
+}
+
 .notice {
   background-color: palegreen;
 }
@@ -130,7 +134,8 @@ footer {
 
 %button {
   padding: 10px;
-  border-radius: 10%;
+  border-radius: 10px;
+  border: none;
   text-decoration: none;
 }
 
@@ -149,6 +154,11 @@ footer {
 .image-150x150 {
   width: 150px;
   height: 150px;
+}
+
+.image-450x300 {
+  width: 450px;
+  height: 300px;
 }
 
 .image-contain {
