--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -35,6 +35,7 @@
 }
 
 .searched-rooms-list {
+  padding: 0;
   list-style: none;
   display: flex;
   flex-wrap: wrap;
@@ -53,6 +54,28 @@
 .searched-rooms-list>li>img {
   width: 100%;
   height: 40%;
+}
+
+.searched-rooms-list>li>div {
+  height: 60%;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.searched-rooms-list>li>div>div {
+  overflow: hidden;
+}
+
+.searched-rooms-list>li>div>a {
+  margin: 10px;
+  display: block;
+}
+
+.searched-rooms-list>li>div>div>p:first-child {
+  margin: 10px 0;
+  font-size: 25px;
 }
 
 .room-detail-navigator {
@@ -101,5 +124,4 @@
 .room-detail-text form>div:last-child>a {
   display: block;
   width: 100%;
-  text-align: center;
 }
