【追加】登録済みおよび予約済み施設一覧ページにスタイルを追加

--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -19,6 +19,10 @@
   border-bottom: 1px solid rgba(128, 128, 128, 0.3);
 }
 
+.registered-rooms-list tbody tr td {
+  max-width: 200px;
+}
+
 .registered-rooms-list a {
   text-decoration: none;
 }
