--- a/app/assets/stylesheets/reservations.scss
+++ b/app/assets/stylesheets/reservations.scss
@@ -19,6 +19,10 @@
   border-bottom: 1px solid rgba(128, 128, 128, 0.3);
 }
 
+.reserved-rooms-list tbody tr td {
+  max-width: 200px;
+}
+
 .reserved-rooms-list a {
   text-decoration: none;
 }
